# tropical_cyclone

./: .gitignore  README.md  era5-test.py  models-disc_opt_weights.h5.REMOVED.git-id  models-disc_weights.h5.REMOVED.git-id  models-gen_det_opt_weights.h5.REMOVED.git-id  models-gen_det_weights.h5.REMOVED.git-id  models-gen_opt_weights.h5.REMOVED.git-id  models-gen_weights.h5.REMOVED.git-id  models-run_status.json  new_gan.yaml  original_gan.yaml  pyproject.toml
cgan/: README.md  benchmarks.py  blocks.py  config-example.yaml  data.py  data_generator.py  data_generator_ifs.py  eval.ipynb  evaluate.py  evaluation.py  gan.py  generate_predictions.py  layers.py  main.py  main.sh  models.py  notebook.sh  params.yaml  plots.py  predict.py  roc.py  run_qual.py  setupdata.py  setupmodel.py  start_notebook.sh  test.sh  tfrecords_backup.py  tfrecords_generator.py  tfrecords_generator_ifs.py  train.py  train.sh
chapter_3/: NorthAtlantic_storms.csv  NorthAtlantic_tracks.csv  NorthEastPacific_storms.csv  NorthEastPacific_tracks.csv  NorthIndian_storms.csv  NorthIndian_tracks.csv  NorthWestPacific_storms.csv  NorthWestPacific_tracks.csv  SouthAtlantic1_storms.csv  SouthAtlantic1_tracks.csv  SouthAtlantic2_storms.csv  SouthAtlantic2_tracks.csv  SouthIndian_storms.csv  SouthIndian_tracks.csv  SouthWestPacific_storms.csv  SouthWestPacific_tracks.csv  cmip_input_analysis.ipynb  cmip_track_analysis.ipynb  composite.ipynb  composite_anomaly.ipynb  composite_chirps.ipynb  composite_future.ipynb  composite_summary.ipynb  file_list.txt  highresmip_track_analysis.ipynb  population_exposure.ipynb  (+9 more)
(+481 files in other folders)
