[tool.poetry]
name = "aquatic"
version = "0.1.0"
description = ""
authors = ["Emily Vosper"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
Cartopy = "^0.20.2"
matplotlib = "^3.5.1"
tensorflow = ">=2.5.0"
tensorflow-gpu = "2.7.0"
PyYAML = "^6.0"
pandas = "1.3.2"
sklearn = "^0.0"
opencv-python = "4.3.0.36"
properscoring = "^0.1"
seaborn = "^0.11.2"
netCDF4 = "^1.5.8"
global-land-mask = "^1.0.0"
pysteps = "^1.6.1"
numpy = ">=1.19.2,<1.20.0"
numba = "^0.55.1"
cdsapi = "^0.5.1"
geopandas = "^0.10.2"
typing-extensions = ">=3.7.4,<3.8.0"
keras = "2.7.0"
ipykernel = "^6.11.0"
shapes = "^0.1.3"
pysal = "^2.6.0"
xarray = "0.20.0"
jupyter = "^1.0.0"
notebook = "^6.4.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
